Closed
Bug 371525
Opened 19 years ago
Closed 19 years ago
password trouble with multiple accounts after update to firefox 2.0.0.2 or 1.5.0.10
Categories
(Toolkit :: Password Manager, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mail, Assigned: Dolske)
References
Details
(5 keywords)
Attachments
(4 files)
|
832 bytes,
application/octet-stream
|
Details | |
|
1.02 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.32 KB,
patch
|
asaf
:
review+
mconnor
:
review+
mconnor
:
approval1.8.1.3+
|
Details | Diff | Splinter Review |
|
1.33 KB,
patch
|
mconnor
:
approval1.8.0.11+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; it; rv:1.8.1.2) Gecko/20070219 Firefox/2.0.0.2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; it; rv:1.8.1.2) Gecko/20070219 Firefox/2.0.0.2
if for a site you have multiple accounts, the password manager doesn't insert any password in the password field after selecting the desired username in the username field.
Reproducible: Always
Steps to Reproduce:
1. insert the masterpassword when asked
2. choose the desired username in the username field
3. the password manager doesn't insert any password in the password field
Actual Results:
no password inserted
Expected Results:
password inserted
it worked flawlessy with firefox 2.0.0.1
Comment 1•19 years ago
|
||
Password discussion on forum: http://forums.mozillazine.org/viewtopic.php?t=523655
Comment 2•19 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.2) Gecko/20070219 Firefox/2.0.0.2
Confirmed.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•19 years ago
|
Summary: password trouble with multiple accounts after update to firefox 2.0.0.2 → password trouble with multiple accounts after update to firefox 2.0.0.2 or 1.5.0.10
Updated•19 years ago
|
Flags: blocking1.8.1.3?
Keywords: qawanted,
regression
Updated•19 years ago
|
Blocks: CVE-2006-6077
there is a related problem (Bug 369969), which makes going back rather difficult
Comment 5•19 years ago
|
||
(In reply to comment #0)
> if for a site you have multiple accounts, the password manager doesn't insert
> any password in the password field after selecting the desired username in the
> username field.
On some sites, the PM doesn't insert any password then clicking on the submit button without writing any pwd, the login windows reappears with password field compiled, then all works correctly.
If I insert manually the pwd, copying it from Tools-Option-show password, then subsequent logins work well
Comment 6•19 years ago
|
||
Is there a site that always hits this? If there's a clear set of steps (i.e. run 2.0.0.1, save multiple passwords, upgrade, test) I'd be happy to dig into that, or if someone can do this with a signons2.txt that I can then use to test that'd be great too. (i.e. clean profile so there isn't unrelated clutter).
Comment 7•19 years ago
|
||
Steps to reproduce:
- Copy the attached signons.txt and key3.db into the profile
- Start Firefox 2.0.0.2 and go to http://forums.mozillazine.org/login.php
- Click in the Username field and select the first user name
(user1 has the password password1 and user2 has the password password2)
- Password field will show up empty
Also some discussion here: http://forums.mozillazine.org/viewtopic.php?t=523848
The workaround is to copy/paste the url of the site (below the line with the '.') to the empty lines below the encrypted passwords.
Then the password manager uses them as expected.
| Assignee | ||
Comment 12•19 years ago
|
||
[Attachment is a plain diff, as I'm not sure how to make a patch for code that hasn't landed on trunk yet.]
When signons.txt is migrated to signons2.txt, the new action URL field for each login is left blank (because we don't know where the form will be submitted). The code usually treats this as a special case, and will fill in a blank entry with a real URL the first time it's used.
When multiple logins are available for a form, Password Manager doesn't fill in anything on page load, instead waiting for the user to start typing a login name... An autocomplete handler -- FillPassword() -- then gets called to fill in the password field for that login. Unfortunately, the code here fails to treat an empty action URL as a special case. Thus, the form's action URL never matches the stored (blank) URL, and so the Password Manager refuses to fill in the password.
Workaround: The problem will correct itself for a login once you type in the password manually and submit the form.
Assignee: nobody → dolske
Status: NEW → ASSIGNED
Comment 13•19 years ago
|
||
I can confirm this bug as well for:
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.2) Gecko/20070219 Firefox/2.0.0.2
Auto-passwords don't work anymore for my several www.gmx.net (webmailer) accounts.
| Assignee | ||
Comment 15•19 years ago
|
||
Attachment #256683 -
Flags: review?(mano)
Comment 16•19 years ago
|
||
Quote Justin Dolske:
"Thus, the form's action URL never matches the stored (blank) URL, and so the Password Manager refuses to fill in the password."
Well, in which case, password manager should fill in the password and come up with a fresh popup:
"Save this password for submission to site:" %site%
| Assignee | ||
Comment 17•19 years ago
|
||
(In reply to comment #16)
> Well, in which case, password manager should fill in the password and come up
> with a fresh popup:
> "Save this password for submission to site:" %site%
No, it shouldn't, because this is the security problem bug
360493 was fixing. Please read the comments there for an explanation.
Comment 18•19 years ago
|
||
Comment on attachment 256683 [details] [diff] [review]
Patch for branch (FF2)
r=mano. Mike should sanity-check this to.
Attachment #256683 -
Flags: review?(mconnor)
Attachment #256683 -
Flags: review?(mano)
Attachment #256683 -
Flags: review+
Comment 19•19 years ago
|
||
too too; or Gavin.
| Assignee | ||
Comment 20•19 years ago
|
||
Comment 22•19 years ago
|
||
An additional observation: let Firefox insert the UserID from the selection list, then press the "refresh" button (or F5), and the password will be inserted.
Comment 23•19 years ago
|
||
(In reply to comment #22)
> An additional observation: let Firefox insert the UserID from the selection
> list, then press the "refresh" button (or F5), and the password will be
> inserted.
>
That doesn't work for me. Two fixes I have found, either edit signons2.txt or re-enter the password after selecting the Username.
Comment 24•19 years ago
|
||
Same problem with MacOSX
how can i do to change the OS from Wind to All on this bug report ?
Comment 25•19 years ago
|
||
(In reply to comment #24)
> Same problem with MacOSX
>
and build agent/user agent of dup bug 371513 comment #0 says linux.
Changing
Hardware -> ALL
OS -> ALL
OS: Windows XP → All
Hardware: PC → All
Comment 26•19 years ago
|
||
Thank you.
I must say now that the solution is here, on this page (well, it works on my computer…)
the solution : when selected the login you want, type the F5 on keyboard. The the PW fills ! Magical !
the bug is not really fixed but it is a solution for immediately !
Comment 27•19 years ago
|
||
F5 does not work as expected for example, on https://login.yahoo.com the page refresh clears the username field. Also, importing passwords fail. Solution needed to accommodate a business user like me who has, (at last count), many sites which differing user names and passwords are used, some sites have multiple user names and passwords, (webmail login for main mail server as example), and ALL MACHINES IN OFFICE NETWORK MUST BE SYNCHRONIZED. At last count, I have over 276 user names and passwords in the list.
Am now uninstalling broken version 2.X and reinstalling working version of firefox again.
Comment 28•19 years ago
|
||
Comment on attachment 256683 [details] [diff] [review]
Patch for branch (FF2)
r=me, thanks
Attachment #256683 -
Flags: review?(mconnor)
Attachment #256683 -
Flags: review+
Attachment #256683 -
Flags: approval1.8.1.3?
Comment 29•19 years ago
|
||
(In reply to comment #21)
> *** Bug 372058 has been marked as a duplicate of this bug. ***
>
I DISAGREE that the bug I reported is a duplicate to this one (371525). Similar yes, but there's one important difference:
There is NO username to select and try the F5 trick described. The only usernames that haven't vanished from the list are the ones I don't use because I deleted those accounts. The ones that I DO use no longer show up. Only way to log in is the old-fashioned way. At least on ogame.org.
Thoughts/Suggestions?
Thanks!
Comment 30•19 years ago
|
||
Mac OS 10.3.9, just upgraded to Firefox 1.5.0.10 ... most passwords have disappeared, and some usernames have disappeared as well.
Comment 31•19 years ago
|
||
Upgrade from Firefox 1.5.0.9 to 1.5.0.10 has completely broken login/password storage feature. When attempting to log in to my EarthLink Web Mail account, 1.5.0.10 no longer supplies either the login or the password to the page, even though those parameters are stored in the browser's password list. I installed 1.5.0.9 over 1.5.0.10 and the feature works again; however, the re-install blew away my entire password list, requiring re-building from saved emails and scattered notes. Nasty.
Updated•19 years ago
|
Version: unspecified → 2.0 Branch
Updated•19 years ago
|
Version: 2.0 Branch → unspecified
Updated•19 years ago
|
Version: unspecified → 2.0 Branch
Updated•19 years ago
|
Flags: blocking1.8.1.4?
Flags: blocking1.8.1.4+
Flags: blocking1.8.1.3+
Flags: blocking1.8.0.11?
Flags: blocking1.8.0.11+
| Reporter | ||
Comment 32•19 years ago
|
||
(In reply to comment #9)
> Also some discussion here: http://forums.mozillazine.org/viewtopic.php?t=523848
>
> The workaround is to copy/paste the url of the site (below the line with the
> '.') to the empty lines below the encrypted passwords.
> Then the password manager uses them as expected.
>
Well, I found this extensions: https://blueimp.net/mozilla/. It seems to solve the bug. By the way, I hope guys at Mozilla Corp. will solve definitely it for the next Fiefox release.
| Assignee | ||
Comment 33•19 years ago
|
||
Needs checkin on trunk (360493 needs to land first, since it's still not on trunk)
Keywords: qawanted
Whiteboard: [needs checkin]
| Assignee | ||
Updated•19 years ago
|
Attachment #256683 -
Flags: approval1.8.1.3?
| Assignee | ||
Updated•19 years ago
|
Attachment #256718 -
Flags: approval1.8.0.11?
Comment 34•19 years ago
|
||
(In reply to comment #12)
.
.
.
> When multiple logins are available for a form, Password Manager doesn't fill in
> anything on page load, instead waiting for the user to start typing a login
> name... An autocomplete handler -- FillPassword() -- then gets called to fill
> in the password field for that login. Unfortunately, the code here fails to
> treat an empty action URL as a special case. Thus, the form's action URL never
> matches the stored (blank) URL, and so the Password Manager refuses to fill in
> the password.
>
> Workaround: The problem will correct itself for a login once you type in the
> password manually and submit the form.
>
'Fraid it doesn't. I know how to get the list to come up in the form. Anything that I logged into from that list AFTER the update is no longer in that list. I manually deleted them from the Password manager, and then re-input and clicked Remember when prompted, and THEY STILL DON'T SHOW UP IN THE LIST.
Is there ANY chance you guys are going to put out a patch to solve this? Because I'm going back to IE otherwise =\
Comment 35•19 years ago
|
||
mozilla/toolkit/components/passwordmgr/base/nsPasswordManager.cpp 1.92
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [needs checkin]
Comment 36•19 years ago
|
||
Hello, i would like to stop recieve CC for this bug. (i find a solution on my machine with the F5 key)
I try to use the "remove selected CC" spot, but i did not find where to click to confirm the removing. I look on every menus on my account and didn't find something to stop this bug CCs.
I there someone can help me ?
Comment 37•19 years ago
|
||
Sorry, it' me again, i just find how to do !
i should select the "remove selected CC" as i wasd doing and…
Go far far far far far far away down down down far down very long way… … …
To click te "commit" button on the downer of the page…
Maybe you xhould put a "commit" button on the top of the page ?
Comment 40•19 years ago
|
||
Comment on attachment 256683 [details] [diff] [review]
Patch for branch (FF2)
a=mconnor on behalf of drivers for 1.8 branch checkin
Attachment #256683 -
Flags: approval1.8.1.4?
Attachment #256683 -
Flags: approval1.8.1.3?
Attachment #256683 -
Flags: approval1.8.1.3+
Comment 41•19 years ago
|
||
Comment on attachment 256718 [details] [diff] [review]
Patch for FF1.5
a=mconnor on behalf of drivers for 1.8.0.11 checkin
Attachment #256718 -
Flags: approval1.8.0.12? → approval1.8.0.11+
Updated•19 years ago
|
Whiteboard: [checkin needed]
Comment 42•19 years ago
|
||
mozilla/toolkit/components/passwordmgr/base/nsPasswordManager.cpp 1.65.2.4.4.4
mozilla/toolkit/components/passwordmgr/base/nsPasswordManager.cpp 1.65.2.15
Keywords: fixed1.8.0.11,
fixed1.8.1.3
Whiteboard: [checkin needed]
Comment 45•19 years ago
|
||
verified fixed on the 1.8 branch using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.3pre) Gecko/2007030903 BonEcho/2.0.0.3pre. Final verification will occur when we get official candidate builds on Monday.
To verify, I used Ria's test case in Comment 7.
Keywords: fixed1.8.1.3 → verified1.8.1.3
Comment 46•19 years ago
|
||
verified fixed on the 1.8.0 branch using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.11pre) Gecko/20070309 Firefox/1.5.0.11pre. Final verification
will occur when we get official candidate builds on Monday.
To verify, I used Ria's test case in Comment 7.
Updated•19 years ago
|
Keywords: fixed1.8.0.11 → verified1.8.0.11
Comment 47•19 years ago
|
||
re- verified fixed on the official 1.8 branch candidate builds using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.3) Gecko/2007030919 Firefox/2.0.0.3 To verify, I used Ria's test case in Comment 7. Each time I selected a user the PW was filled in.
Comment 48•19 years ago
|
||
re- verified fixed on the official 1.8.0 branch candidate builds using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.11) Gecko/20070312 Firefox/1.5.0.11. To verify, I used Ria's test case in Comment 7. Each time I selected a user the PW was filled in.
Comment 50•19 years ago
|
||
Because of the separate mini-branch for 2.0.0.3/1.5.0.11 marking fixed for the next releases as well to trigger re-verification.
Keywords: fixed1.8.0.12,
fixed1.8.1.4
Comment 51•19 years ago
|
||
I am using Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.3pre) Gecko/20070315 BonEcho/2.0.0.3pre ID:2007031504
I have a section in the signons2.txt file relating to a webmail site..... and the problem is that the site is connected via the address
https://webmail.york.ac.uk
but the system then automatically moves the connection to webmail0 or webmail1 according to how busy the system is.
This seems to confuse firefox - occasionally it autofills, but often does not and it is not consistent.
The signons2.txt file currently contains lines like (with the details of the user and password munged for security)....
https://webmail.york.ac.uk
username
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx==
*password
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx==
https://webmail1.york.ac.uk
So the url's at the start and end of the section are different - but if I manually edit the url at the end of the section to be the same as at the beginning then firefox edits it back and the problem remains!
Comment 52•18 years ago
|
||
verified fixed 1.8.1.4 and 1.8.0.12 using the test case from comment #7. Each time the password was filled in.
Test builds:
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.4pre) Gecko/2007042803 BonEcho/2.0.0.4pre
Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.4pre) Gecko/2007042805 BonEcho/2.0.0.4pre
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.4pre) Gecko/2007042805 BonEcho/2.0.0.4pre
and for 1.8.0.12
Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.0.12pre) Gecko/20070428 Firefox/1.5.0.12pre
Comment 53•18 years ago
|
||
I still have the same problem as in comment #51 in version
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.4pre) Gecko/20070429 BonEcho/2.0.0.4pre ID:2007042903
So for me this is not fixed yet.
Comment 54•18 years ago
|
||
None of any of this ever fixed the problem for me. Am intensely disappointed, even being well accustomed to what a PITA debugging is.
But since everything I've written has essentially been ignored... =\
Comment 55•18 years ago
|
||
comment 51 is something covered by a more specific bug elsewhere, but there's no good way to fix this without throwing away the action URL validation in a pretty major way.
Of course, load balancing doesn't actually require multiple subdomains, there's thousands of sites that have transparent load balancing....
Updated•17 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•