Bug 371525: fix password trouble when multiple passwords are stored for a given site, by correctly handling an empty actionURL, patch by Justin Dolske <dolske@mozilla.com>, r=mconnor,mano